Added README files withing mapping folder to keep structure for analyses. Fixed gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ assemblies/Alyrata_384_v1_only1-8.fa
 # results from RagTag
 
 mapping/Alyr/minimap2/*
-mapping/Ahal/minimap2/
+mapping/Ahal/minimap2/*
 
 
 
