--- a/envs/mappers.yaml
+++ b/envs/mappers.yaml
@@ -2,8 +2,12 @@ channels:
   - conda-forge
   - bioconda
   - defaults
+  - r
 dependencies:
   - python=3.8.5
   - minimap2=2.17
   - mummer4=4.0.0beta2
   - last=1060
+  - pip
+  - pip:
+    - bioconvert
