Fixed lastal script to align our assemblies to JGi and not vice versa. Updated gitignore too.

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,8 @@ mapping/Ahal/mummer/*
 mapping/Alyr/lastal/*
 mapping/Ahal/lastal/*
 
-# Db files form last
+# Db files from last
 
-assemblies/AhalDb*
-assemblies/AlyrDb*
+assemblies/JGIDb*
 
 
